--- a/html/detail.html
+++ b/html/detail.html
@@ -37,32 +37,34 @@
           </a>
           <span class="quatity-count me-3">0</span>
         </div>
-        <!-- Modal -->
-        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-          <div class="modal-dialog">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h1 class="modal-title fs-5" id="exampleModalLabel">My Cart</h1>
-                <!-- <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button> -->
-              </div>
-              <div class="modal-body">
-                <ul class="modal-contents">
-                </ul>
-              </div>
-              <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <button id="btnDeleteAllCart" type="button" class="btn btn-danger" onclick="clearItemCart()">Clear
-                  all</button>
-                <a href="#ViewAllCart" type="button" class="btn btn-success">View all</a>
-              </div>
-            </div>
-          </div>
-        </div>
+
+
         <a class="me-3" href="#">Login</a>
         <a class="me-3" href="./register.html">Register</a>
       </div>
     </div>
   </header>
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="exampleModalLabel">My Cart</h1>
+          <!-- <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button> -->
+        </div>
+        <div class="modal-body">
+          <ul class="modal-contents">
+          </ul>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button id="btnDeleteAllCart" type="button" class="btn btn-danger" onclick="clearItemCart()">Clear
+            all</button>
+          <a href="#ViewAllCart" type="button" class="btn btn-success">View all</a>
+        </div>
+      </div>
+    </div>
+  </div>
   <nav class=" navbar navbar-expand-lg bg-tertiary px-2 text-black">
     <div class="container-fluid">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -121,63 +123,67 @@
       <div class="title text-center">
         <h3>- Realate Product -</h3>
       </div>
-      <div class="products_show py-3">
-        <div class="content d-flex flex-wrap mx-auto"></div>
+      <div class="products_show py-3 mt-4">
+        <div class="content row justify-content-evenly"></div>
       </div>
     </div>
   </section>
   <footer class="footer">
     <div class="top_footer">
       <div class="container">
-        <div class="footer-content left">
-          <h5>GET HELP</h5>
-          <ul>
-            <li><a href="">Contact us</a></li>
-            <li><a href="">Shopping</a></li>
-            <li><a href="">NIKEiD</a></li>
-            <li><a href="">Nike+</a></li>
-          </ul>
-        </div>
-        <div class="footer-content mid">
-          <h5>ORDERS</h5>
-          <ul>
-            <li><a href="">Payment options</a></li>
-            <li><a href="">Shipping and delivery</a></li>
-            <li><a href="">Returns</a></li>
-          </ul>
-        </div>
-        <div class="footer-content right">
-          <h5>REGISTER</h5>
-          <ul>
-            <li><a href="">Create one account to manage everything you do with Nike, from your shopping preferences to
-                your Nike+ activity.</a></li>
-            <li><a class="footer-click-add" href="">Learn more</a></li>
-          </ul>
+        <div class="row justify-content-evenly">
+          <div class="footer-content left col-6 col-md-4">
+            <h5>GET HELP</h5>
+            <ul>
+              <li><a href="">Contact us</a></li>
+              <li><a href="">Shopping</a></li>
+              <li><a href="">NIKEiD</a></li>
+              <li><a href="">Nike+</a></li>
+            </ul>
+          </div>
+          <div class="footer-content mid col-6 col-md-4">
+            <h5>ORDERS</h5>
+            <ul>
+              <li><a href="">Payment options</a></li>
+              <li><a href="">Shipping and delivery</a></li>
+              <li><a href="">Returns</a></li>
+            </ul>
+          </div>
+          <div class="footer-content right col-12 col-md-4">
+            <h5>REGISTER</h5>
+            <ul>
+              <li><a href="">Create one account to manage everything you do with Nike, from your shopping preferences to
+                  your Nike+ activity.</a></li>
+              <li><a class="footer-click-add" href="">Learn more</a></li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
     <div class="bot_footer">
       <div class="container">
-        <div class="footer-content">
-          <h5>EMAIL SIGN UP</h5>
-          <ul>
-            <li><a href="">Be the first to know about new products and special offers.</a></li>
-            <li><a class="footer-click-add" href="">Sign up now</a></li>
-          </ul>
-        </div>
-        <div class="footer-content">
-          <h5>GIFT CARDS</h5>
-          <ul>
-            <li><a href="">Give the gift that always fits.</a></li>
-            <li><a class="footer-click-add" href="">View cards</a></li>
-          </ul>
-        </div>
-        <div class="footer-content">
-          <h5>STORES NEAR YOU</h5>
-          <ul>
-            <li><a href="">Locate a Nike retail stories or authorized retailler.</a></li>
-            <li><a class="footer-click-add" href="">Search</a></li>
-          </ul>
+        <div class="row justify-content-evenly">
+          <div class="footer-content col col-md-4">
+            <h5>EMAIL SIGN UP</h5>
+            <ul>
+              <li><a href="">Be the first to know about new products and special offers.</a></li>
+              <li><a class="footer-click-add" href="">Sign up now</a></li>
+            </ul>
+          </div>
+          <div class="footer-content col col-md-4">
+            <h5>GIFT CARDS</h5>
+            <ul>
+              <li><a href="">Give the gift that always fits.</a></li>
+              <li><a class="footer-click-add" href="">View cards</a></li>
+            </ul>
+          </div>
+          <div class="footer-content col-md-4">
+            <h5>STORES NEAR YOU</h5>
+            <ul>
+              <li><a href="">Locate a Nike retail stories or authorized retailler.</a></li>
+              <li><a class="footer-click-add" href="">Search</a></li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
@@ -195,7 +201,7 @@
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
 
-    <!-- dark mode  -->
+  <!-- dark mode  -->
   <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
   <script src="./../utils/switchTheme.js"></script>
 
