--- a/html/index.html
+++ b/html/index.html
@@ -28,7 +28,7 @@
 </head>
 
 <body onload="onloadData()">
-  <header class="header bg-black py-2 px-3">
+  <header class="header py-2 px-3">
     <div class="container-fluid d-flex justify-content-between">
       <img src="./../assets/img/image 3.png" alt="">
       <div class="d-flex">
@@ -37,32 +37,34 @@
           </a>
           <span class="quatity-count me-3">0</span>
         </div>
-        <!-- Modal -->
-        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-          <div class="modal-dialog">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h1 class="modal-title fs-5" id="exampleModalLabel">My Cart</h1>
-                <!-- <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button> -->
-              </div>
-              <div class="modal-body">
-                <ul class="modal-contents">
-                </ul>
-              </div>
-              <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <button id="btnDeleteAllCart" type="button" class="btn btn-danger" onclick="clearItemCart()">Clear
-                  all</button>
-                <a href="#ViewAllCart" type="button" class="btn btn-success">View all</a>
-              </div>
-            </div>
-          </div>
-        </div>
+
+
         <a class="me-3" href="#">Login</a>
         <a class="me-3" href="./register.html">Register</a>
       </div>
     </div>
   </header>
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="exampleModalLabel">My Cart</h1>
+          <!-- <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button> -->
+        </div>
+        <div class="modal-body">
+          <ul class="modal-contents">
+          </ul>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button id="btnDeleteAllCart" type="button" class="btn btn-danger" onclick="clearItemCart()">Clear
+            all</button>
+          <a href="#ViewAllCart" type="button" class="btn btn-success">View all</a>
+        </div>
+      </div>
+    </div>
+  </div>
   <nav class="navbar navbar-expand-lg bg-tertiary px-2">
     <div class="container-fluid">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -128,68 +130,80 @@
       <span class="visually-hidden">Next</span>
     </button>
   </section>
-  <section class="products">
+  <section class="products mt-3">
     <div class="container">
       <div class="title text-center">
         <h3>- Products Feature -</h3>
       </div>
-      <div class="products_show py-3">
-        <div class="content d-flex flex-wrap mx-auto"></div>
+      <div class="products_show py-3 mt-4">
+        <div class="content row justify-content-evenly">
+        </div>
       </div>
-    </div>
   </section>
   <footer class="footer">
     <div class="top_footer">
       <div class="container">
-        <div class="footer-content left">
-          <h5>GET HELP</h5>
-          <ul>
-            <li><a href="">Contact us</a></li>
-            <li><a href="">Shopping</a></li>
-            <li><a href="">NIKEiD</a></li>
-            <li><a href="">Nike+</a></li>
-          </ul>
-        </div>
-        <div class="footer-content mid">
-          <h5>ORDERS</h5>
-          <ul>
-            <li><a href="">Payment options</a></li>
-            <li><a href="">Shipping and delivery</a></li>
-            <li><a href="">Returns</a></li>
-          </ul>
-        </div>
-        <div class="footer-content right">
-          <h5>REGISTER</h5>
-          <ul>
-            <li><a href="">Create one account to manage everything you do with Nike, from your shopping preferences to
-                your Nike+ activity.</a></li>
-            <li><a class="footer-click-add" href="">Learn more</a></li>
-          </ul>
+        <div class="row justify-content-evenly">
+          <div class="footer-content left col-6 col-md-4">
+            <h5>GET HELP</h5>
+            <ul>
+              <li><a href="">Contact us</a></li>
+              <li><a href="">Shopping</a></li>
+              <li><a href="">NIKEiD</a></li>
+              <li><a href="">Nike+</a></li>
+            </ul>
+          </div>
+          <div class="footer-content mid col-6 col-md-4">
+            <h5>ORDERS</h5>
+            <ul>
+              <li><a href="">Payment options</a></li>
+              <li><a href="">Shipping and delivery</a></li>
+              <li><a href="">Returns</a></li>
+            </ul>
+          </div>
+          <div class="footer-content right col-12 col-md-4">
+            <h5>REGISTER</h5>
+            <ul>
+              <li>
+                <p>Create one account to manage everything you do with Nike, from your shopping preferences to
+                  your Nike+ activity.</p>
+              </li>
+              <li><a class="footer-click-add" href="">Learn more</a></li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
     <div class="bot_footer">
       <div class="container">
-        <div class="footer-content">
-          <h5>EMAIL SIGN UP</h5>
-          <ul>
-            <li><a href="">Be the first to know about new products and special offers.</a></li>
-            <li><a class="footer-click-add" href="">Sign up now</a></li>
-          </ul>
-        </div>
-        <div class="footer-content">
-          <h5>GIFT CARDS</h5>
-          <ul>
-            <li><a href="">Give the gift that always fits.</a></li>
-            <li><a class="footer-click-add" href="">View cards</a></li>
-          </ul>
-        </div>
-        <div class="footer-content">
-          <h5>STORES NEAR YOU</h5>
-          <ul>
-            <li><a href="">Locate a Nike retail stories or authorized retailler.</a></li>
-            <li><a class="footer-click-add" href="">Search</a></li>
-          </ul>
+        <div class="row justify-content-evenly">
+          <div class="footer-content col col-md-4">
+            <h5>EMAIL SIGN UP</h5>
+            <ul>
+              <li>
+                <p>Be the first to know about new products and special offers.</p>
+              </li>
+              <li><a class="footer-click-add" href="">Sign up now</a></li>
+            </ul>
+          </div>
+          <div class="footer-content col col-md-4">
+            <h5>GIFT CARDS</h5>
+            <ul>
+              <li>
+                <p>Give the gift that always fits.</p>
+              </li>
+              <li><a class="footer-click-add" href="">View cards</a></li>
+            </ul>
+          </div>
+          <div class="footer-content col-md-4">
+            <h5>STORES NEAR YOU</h5>
+            <ul>
+              <li>
+                <p>Locate a Nike retail stories or authorized retailler.</p>
+              </li>
+              <li><a class="footer-click-add" href="">Search</a></li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
